plugins {
    id 'java-library'
}

group omfPackage + '.' + mdVersionShort

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly project(":omf-magicdraw-dependencies")
    compileOnly project(":omf-core-framework")
    compileOnly project(":omf-test-framework")

    implementation 'org.eclipse.jetty:jetty-server:9.4.38.v20210224'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.38.v20210224'

    implementation 'com.squareup:javapoet:1.13.0'
}